# iinact-tui

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  query_iinact.py  query_output
.github/workflows/: ci.yml
src/: config.rs  errors.rs  history.rs  main.rs  model.rs  parse.rs  theme.rs  ui.rs  ui_history.rs  ui_idle.rs  ws_client.rs
src/history/: mod.rs  recorder.rs  store.rs  types.rs
src/model/: history_panel.rs  mod.rs  settings.rs  state.rs  types.rs  view.rs
src/ui/: header.rs  mod.rs  settings.rs  status.rs
src/ui/table/: decor.rs  layout.rs  mod.rs
