[package]
name = "iinact-tui"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
futures-util = "0.3"
once_cell = "1"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "sync", "time"] }
tokio-tungstenite = "0.23"
ratatui = { version = "0.26", default-features = false, features = ["crossterm"] }
crossterm = "0.27"
 
